--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,13 +20,8 @@
         </div>
         <button type="submit" class="btn btn-primary mr-2">Search</button>
       </form>
-      <div class="form-inline mt-3">
-        <select id="json-files" class="form-control mr-2"></select>
-        <button onclick="loadJsonFile()" class="btn btn-secondary">Abstract</button>
-      </div>
-      <div class="form-inline mt-3">
-        <select id="summary-files" class="form-control mr-2"></select>
-        <button onclick="loadSummaryFile()" class="btn btn-secondary">Summary</button>
+      <div class="mt-3">
+        <button id="toggle-view-btn" class="btn btn-secondary" onclick="toggleView()">Toggle Abstract/Summary</button>
       </div>
       <div id="results-container"></div>
     </div>
